# AstraGlyph

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  blue_noise_array.txt
assets/models/Samurai_girl/: samurai woman.mtl
assets/scenes/: color_test_scene.json  cornell_box_scene.json  default_scene.json  samurai_girl_scene.json  samurai_girl_test_scene.json
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ProjectOptions.cmake  Sanitizers.cmake
docs/: CPUMultithreading.md  SIMDOptimization.md
scripts/: build.ps1  build.sh  clean_build.ps1  clean_build.sh  configure.ps1  configure.sh
src/: terminus_ttf_data.h
src/app/: Application.cpp  Application.hpp  MainLoop.cpp  MainLoop.hpp  main.cpp
src/core/: Assert.hpp  Config.hpp  Log.cpp  Log.hpp  ThreadPool.cpp  ThreadPool.hpp  Types.hpp
src/geometry/: MeshFactory.cpp  MeshFactory.hpp  ObjLoader.cpp  ObjLoader.hpp  Triangle.cpp  Triangle.hpp  TriangleSoA.cpp  TriangleSoA.hpp
src/math/: Aabb.hpp  Mat4.hpp  Random.hpp  Ray.hpp  Vec2.hpp  Vec3.hpp
src/platform/: Input.cpp  Input.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/render/: AsciiFramebuffer.hpp  AsciiMapper.cpp  AsciiMapper.hpp  BlueNoiseData.hpp  Bvh.cpp  Bvh.hpp  Framebuffer.hpp  GlyphAtlas.cpp  GlyphAtlas.hpp  Integrator.cpp  Integrator.hpp  RayPacket.hpp  RayTracer.cpp  RayTracer.hpp  RenderMetrics.hpp  RenderSettings.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  SimdTriangle.hpp  SimdTriangleAvx2.cpp  SimdTriangleAvx2Any.cpp  SimdTriangleSoA.hpp  SimdTriangleSoAAvx2.cpp  SimdTriangleSoASse3.cpp  SimdTriangleSse3.cpp  SimdTriangleSse3Any.cpp  TemporalAccumulator.cpp  TemporalAccumulator.hpp
src/scene/: Camera.cpp  Camera.hpp  Entity.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  Transform.hpp
src/ui/: DebugOverlay.cpp  DebugOverlay.hpp  SettingsPanel.cpp  SettingsPanel.hpp  UIPanel.cpp  UIPanel.hpp
tests/: CMakeLists.txt  ascii_mapper_tests.cpp  bvh_tests.cpp  geometry_tests.cpp  glyph_atlas_tests.cpp  integrator_area_light_tests.cpp  integrator_reflection_tests.cpp  integrator_tests.cpp  math_tests.cpp  obj_loader_tests.cpp  ray_triangle_tests.cpp  render_color_tests.cpp  renderer_sampling_tests.cpp  renderer_temporal_tests.cpp  renderer_triangle_tests.cpp  sampler_tests.cpp  scene_loader_tests.cpp  test_texture_load.cpp
