function(astraglyph_add_test name source)
  add_executable(${name} ${source})
  target_link_libraries(${name} PRIVATE astraglyph_engine)
  astraglyph_apply_project_options(${name})
  astraglyph_set_warnings(${name} ${ASTRAGLYPH_WARNINGS_AS_ERRORS})
  astraglyph_enable_sanitizers(${name})
  add_test(NAME ${name} COMMAND $<TARGET_FILE_NAME:${name}>)
  set_tests_properties(${name} PROPERTIES WORKING_DIRECTORY $<TARGET_FILE_DIR:${name}>)
endfunction()

astraglyph_add_test(math_tests math_tests.cpp)
astraglyph_add_test(geometry_tests geometry_tests.cpp)
astraglyph_add_test(integrator_tests integrator_tests.cpp)
astraglyph_add_test(obj_loader_tests obj_loader_tests.cpp)
astraglyph_add_test(ascii_mapper_tests ascii_mapper_tests.cpp)
astraglyph_add_test(ray_triangle_tests ray_triangle_tests.cpp)
astraglyph_add_test(bvh_tests bvh_tests.cpp)
astraglyph_add_test(renderer_triangle_tests renderer_triangle_tests.cpp)
astraglyph_add_test(sampler_tests sampler_tests.cpp)
astraglyph_add_test(renderer_sampling_tests renderer_sampling_tests.cpp)
astraglyph_add_test(integrator_reflection_tests integrator_reflection_tests.cpp)
astraglyph_add_test(integrator_area_light_tests integrator_area_light_tests.cpp)
astraglyph_add_test(scene_loader_tests scene_loader_tests.cpp)
astraglyph_add_test(renderer_temporal_tests renderer_temporal_tests.cpp)
